<resources>
    <string name="app_name">ecohero</string>
    <string name="find_waste">Find Waste</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">The ecohero app helps users differentiate between organic, inorganic and hazardous waste. Using visual recognition technology, the app identifies the type of waste that has been photographed with the camera. Detailed information about each type of waste is provided, including tips for proper treatment. The app helps users sort waste more efficiently, reduces errors in sorting, and increases environmental awareness. \n\nApplication Benefits:\nDifferentiate organic and inorganic waste with accuracy.\nProvides information on the types of waste and how they are processed.\nIncrease efficiency in waste sorting.\nReduce faults in the waste recycling process.\nEncourage environmental awareness and sustainable waste management.\n\nThe ecohero app is a practical solution for better waste segregation and higher environmental awareness.</string>
    <string name="profile">Profile</string>
    <string name="text_upload">Upload your\nwaste here</string>
    <string name="upload_image">Upload Image</string>
    <string name="join_with_us">Join with Us</string>
    <string name="for_better_future">for better future!</string>
    <string name="log_out">Log Out</string>
    <string name="history">History</string>
    <string name="about_app">About App</string>
    <string name="Date">Tanggal</string>
    <string name="Title">Title</string>
    <string name="author">Author</string>
    <string name="description_detail">Description Detail</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change">Change</string>
    <string name="about_this_waste">About this waste</string>
    <string name="description">Description</string>
    <string name="discover">Discover</string>
    <string name="read_about_environment_issues_here">Read about environment \nIssues here</string>
    <string name="search_some_topics">Search some topics</string>
    <string name="latest_news">Latest News</string>
    <string name="hello">Hello</string>
    <string name="sing_in_your_account">Sign in your account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="start_classifying_nyour_waste">Start classifying\nyour waste</string>
    <string name="save">Save</string>
    <string name="error_occurred">Data Tidak Ditemukan</string>
    <string name="no_data_available">Data tidak ada</string>
    <string name="Handling">Handling</string>
</resources>